[tool.poetry]
name = "graphene-mongo-extras"
version = "0.1.0"
description = "Filtering and interfaces for graphene-mongo"
authors = ["Irfan Baig <riverfr0zen@elitemail.org>"]

[tool.poetry.dependencies]
python = "^3.6.7"
graphene = "^2.1"
graphene-mongo = "^0.2.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
mongomock = "^3.16"
pytest-cov = "^2.6"

#[build-system]
#requires = ["poetry>=0.12"]
#build-backend = "poetry.masonry.api"
